edited for task tranform

--- a/style.css
+++ b/style.css
@@ -50,3 +50,56 @@ body{
     text-decoration: none;
     color: black;
 }
+
+
+.cards{
+
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto auto;
+    justify-content: space-evenly;
+    grid-row-gap: 50px;
+    grid-column-gap: 100px;
+    margin: 10px;
+    margin-top: 50px;
+    
+}
+.items{
+    border: 2px outset whitesmoke;
+    padding: 10px;
+    text-align: center;
+    height: auto;
+}
+/* .items:hover{
+
+    transform: scale(2);
+    transition: 1.5s;
+    padding: 0;
+
+} */
+
+.item1:hover{
+    transform: scale(2);
+    transition: 1.5s;
+
+}
+.item2:hover{
+    transform: rotate(360deg);
+    transition: 1.5s;
+}
+.item3:hover{
+    transform: translate(-50px);
+    transition: 1.5s;
+}
+.item4:hover{
+    transform: skewY(30deg);
+    transition: 1.5s;
+}
+.item5:hover{
+    transform: translate(50px);
+    transition: 1.5s;
+}
+.item6:hover{
+    transform: rotateY(45deg);
+    transition: 1.5s;
+}
